Remote cursors shouldn't be visible in history mode (fix #88)

--- a/client/main.styl
+++ b/client/main.styl
@@ -224,11 +224,11 @@ svg
 
 body:not(.tool-history)
   .historyShow
-    visibility: hidden
+    display: none
 body.tool-history
   --palette-color: #d6bc9f  // sepia-like
   .historyHide
-    visibility: hidden
+    display: none
 body:not(.tool-text)
   .textShow
     display: none
